Fixed tests Added packages for service classes